new release deployed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
+<!-- TODO: NewsTicker expand button. onClick opens a model, panel or toaster -->
+
 <header class="header">
   <app-navbar #navbar></app-navbar>
 </header>
@@ -74,5 +76,6 @@
     [title]="'GST Updates'"
     [events]="sidebarHeaderMessages"
     [showCounter]="false"
+    ><i class="fa fa-user"></i
   ></ngx-newsticker>
 </div>
