--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -55,8 +55,13 @@ $primary-gradient: linear-gradient(90deg,
       }
     }
 
+    .nt-navi {
+      top: 4px !important;
+      right: 1.5rem !important;
+    }
+
     .nt-content {
-      left: 12rem !important;
+      left: 10.5rem !important;
       height: 50px !important;
       padding-top: .3rem !important;
 
