--- a/src/app/shared/brand-button/brand-button.component.html
+++ b/src/app/shared/brand-button/brand-button.component.html
@@ -17,6 +17,12 @@
       class=""
       alt=""
     />
+    <span
+      class="text-uppercase pt-1"
+      style="font-size: 16px; font-weight: 700;"
+      *ngIf="logoHidden"
+      >MTP</span
+    >
     <svg
       xmlns:dc="http://purl.org/dc/elements/1.1/"
       xmlns:cc="http://creativecommons.org/ns#"
