--- a/src/app/shared/thank-you/thank-you.component.html
+++ b/src/app/shared/thank-you/thank-you.component.html
@@ -6,11 +6,8 @@
   <hr />
   <p>Having trouble? <a href="mailto:info@medtelplus.com">Contact us</a></p>
   <p class="lead">
-    <a
-      class="btn btn-primary btn-sm"
-      href="https://medtelplus.com"
-      role="button"
-      >Continue to homepage</a
-    >
+    <button class="btn btn-primary btn-sm" role="button" (click)="navigateTo()">
+      Continue to homepage
+    </button>
   </p>
 </div>
