--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,4 +1,4 @@
-<div id="notfound">
+<div id="notfound" ngxAnimatedGradient>
   <div class="notfound">
     <div class="notfound-404">
       <h1>4<span></span>4</h1>
@@ -8,6 +8,8 @@
       Sorry but the page you are looking for does not exist, have been removed.
       name changed or is temporarily unavailable
     </p>
-    <button (click)="navigateTo('/')">Back to homepage</button>
+    <button class="btn btn-primary" (click)="navigateTo('/')">
+      Back to homepage
+    </button>
   </div>
 </div>
