--- a/src/app/shared/user-cart/user-cart.component.html
+++ b/src/app/shared/user-cart/user-cart.component.html
@@ -9,7 +9,7 @@
     <div class="p-2 pt-0">
       <div
       class="card"
-      *ngIf="!items.length"
+      *ngIf="!items?.length"
       >
       <div class="card-header m-0">
         <h4 class="card-title bg-warning text-light">No Items In Cart!</h4>
@@ -184,13 +184,13 @@
       </div>
       <div class="d-flex" *ngIf="!isCheckout && cart?.items?.length">
         <button
-          class="m-1 btn btn-outline-primary"
+          class="m-1 btn btn-primary"
           (click)="navigateTo('/checkout')"
         >
-          Checkout
+          Checkout <i class="fa fa-check"></i>
         </button>
         <button class="m-1 btn btn-secondary" (click)="navigateTo('/store')">
-          Shop
+          Shop <i class="fa fa-shopping-cart"></i>
         </button>
       </div>
     </div>
