--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -236,55 +236,6 @@ button {
   animation: bounce 3s infinite;
 }
 
-// @-moz-keyframes bounce {
-//   0%, 20%, 50%, 80%, 100% {
-//     -moz-transform: translateY(0);
-//     transform: translateY(0);
-//   }
-//   40% {
-//     -moz-transform: translateY(-30px);
-//     transform: translateY(-30px);
-//   }
-//   60% {
-//     -moz-transform: translateY(-15px);
-//     transform: translateY(-15px);
-//   }
-// }
-// @-webkit-keyframes bounce {
-//   0%, 20%, 50%, 80%, 100% {
-//     -webkit-transform: translateY(0);
-//     transform: translateY(0);
-//   }
-//   40% {
-//     -webkit-transform: translateY(-30px);
-//     transform: translateY(-30px);
-//   }
-//   60% {
-//     -webkit-transform: translateY(-15px);
-//     transform: translateY(-15px);
-//   }
-// }
-// @keyframes bounce {
-//   0%, 20%, 50%, 80%, 100% {
-//     -moz-transform: translateY(0);
-//     -ms-transform: translateY(0);
-//     -webkit-transform: translateY(0);
-//     transform: translateY(0);
-//   }
-//   40% {
-//     -moz-transform: translateY(-30px);
-//     -ms-transform: translateY(-30px);
-//     -webkit-transform: translateY(-30px);
-//     transform: translateY(-30px);
-//   }
-//   60% {
-//     -moz-transform: translateY(-15px);
-//     -ms-transform: translateY(-15px);
-//     -webkit-transform: translateY(-15px);
-//     transform: translateY(-15px);
-//   }
-// }
-
 .subscription-form .form-group {
   position: relative;
 }
@@ -1838,7 +1789,7 @@ a.text-dark:focus {
   * 6. FORMS
   */
 .form-control {
-  // padding: 0.75rem 1.6rem;
+  padding: 0.75rem 1.6rem;
   font-size: 1rem;
   line-height: 1.5;
   color: #495057;
