--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,44 +1,28 @@
 <!-- Hero Section-->
 <!-- TODO: Hero Slider ??? -->
-<section #hero class="hero home-page bg-gradient-primary"
->
-  <div
-    style="background-image: url(assets/img/hero-bg.png); opacity: .35"
-    class="background img-fluid"
-  ></div>
+<section #hero class="hero home-page bg-gradient-primary">
+  <div style="background-image: url(assets/images/hero-bg.png); opacity: .35" class="background img-fluid"></div>
   <div class="container">
     <div class="row align-items-center justify-content-center">
       <div class="col-lg-6">
-        <h1
-          class="hero-heading text-uppercase text-center mb-0 animate"
-          data-aos="fade-up"
-        >
+        <h1 class="hero-heading text-uppercase text-center mb-0 animate" data-aos="fade-up">
           TeleCare.<br />
           <small>ReInvented.</small>
         </h1>
         <div class="row">
           <div class="col-lg-12">
-            <p
-              class="lead text-center mt-4 mb-4 animate"
-              data-aos="fade-right"
-              data-aos-delay=".5"
-            >
-              Want to Learn more about MedTelPlus products?
+            <p class="lead text-center mt-4 mb-4 animate" data-aos="fade-right" data-aos-delay=".5">
+              Want to Learn more about MedTelPlus products?<br />Subscribe to our monthly newsletter.
             </p>
           </div>
         </div>
         <form class="subscription-form">
           <div class="input-group p-0">
-            <input
-            #email
-              type="email"
-              name="email"
-              placeholder="Get Newsletter"
-              class="form-control"
-            />
+            <input #email type="email" name="email" placeholder="Enter Email" class="form-control" />
             <div class="input-group-append">
-              <button type="button" class="btn border-0 btn-primary" (click)="sendNewsletter(email.value)">
-                <i class="fa fa-paper-plane"></i> {{hero.clientWidth > 990 ? 'Get Newsletter': ''}}
+              <button [disabled]="!email.value && email.value.length < 3" type="button" class="btn border-0 btn-primary"
+                (click)="sendNewsletter(email.value)">
+                <i class="fa fa-paper-plane"></i> {{hero.clientWidth > 990 ? 'Subscribe': ''}}
               </button>
             </div>
           </div>
@@ -60,10 +44,7 @@
   <p class="lead text-muted mt-2">
     Discover all MedTelPlus Products
   </p>
-  <button
-    class="btn btn-outline-primary"
-    (click)="dividerOne.navigateTo('store')"
-  >
+  <button class="btn btn-outline-primary" (click)="dividerOne.navigateTo('store')">
     Go to Shop <i class="fa fa-shopping-cart"></i>
   </button>
 </div>
@@ -74,10 +55,7 @@
       <!--  -->
       <div class="col-sm-10 col-md-8 col-lg-4 m-l-r-auto">
         <!-- block1 -->
-        <div
-          class="block1 hov-img-zoom pos-relative m-b-30"
-          *ngFor="let item of bannerRow1Products"
-        >
+        <div class="block1 hov-img-zoom pos-relative m-b-30" *ngFor="let item of bannerRow1Products">
           <img [src]="item.imgUrl" [alt]="item.productName" />
 
           <div class="block1-wrapbtn w-size2">
@@ -93,10 +71,7 @@
       <!--  -->
       <div class="col-sm-10 col-md-8 col-lg-4 m-l-r-auto">
         <!-- block1 -->
-        <div
-          class="block1 hov-img-zoom pos-relative m-b-30"
-          *ngFor="let item of bannerRow2Products"
-        >
+        <div class="block1 hov-img-zoom pos-relative m-b-30" *ngFor="let item of bannerRow2Products">
           <img [src]="item.imgUrl" [alt]="item.productName" />
 
           <div class="block1-wrapbtn w-size2">
@@ -111,10 +86,7 @@
       </div>
       <!--  -->
       <div class="col-sm-10 col-md-8 col-lg-4 m-l-r-auto">
-        <div
-          class="block1 hov-img-zoom pos-relative m-b-30"
-          *ngFor="let item of bannerRow3Products"
-        >
+        <div class="block1 hov-img-zoom pos-relative m-b-30" *ngFor="let item of bannerRow3Products">
           <img [src]="item.imgUrl" [alt]="item.productName" />
 
           <div class="block1-wrapbtn w-size2">
@@ -137,10 +109,8 @@
 
             <div class="w-size2 p-t-25">
               <!-- Button -->
-              <button
-                class="flex-c-m size2 bg4 bo-rad-23 hov1 m-text3 trans-0-4"
-                (click)="dividerOne.navigateTo('store')"
-              >
+              <button class="flex-c-m size2 bg4 bo-rad-23 hov1 m-text3 trans-0-4"
+                (click)="dividerOne.navigateTo('store')">
                 Sign Up
               </button>
             </div>
@@ -177,12 +147,7 @@
         </div>
       </div>
       <div class="card col-lg-4 col-md-12 mt-5 card animate" data-aos="fade-up">
-        <img
-          class="card-img-top"
-          src="assets/images/police.png"
-          style="width: 50%"
-          alt="Police Officer Icon"
-        />
+        <img class="card-img-top" src="assets/images/police.png" style="width: 50%" alt="Police Officer Icon" />
         <div class="card-body text-center">
           <h4 class="card-title">Peace of Mind</h4>
           <p class="card-text">
@@ -192,12 +157,7 @@
         </div>
       </div>
       <div class="card col-lg-4 col-md-12 mt-5 card animate" data-aos="fade-up">
-        <img
-          class="card-img-top"
-          src="assets/images/agent.png"
-          style="width: 50%"
-          alt="Agent Icon"
-        />
+        <img class="card-img-top" src="assets/images/agent.png" style="width: 50%" alt="Agent Icon" />
         <div class="card-body text-center">
           <h4 class="card-title">24/7 Support</h4>
           <p class="card-text">
@@ -222,4 +182,3 @@
 <!-- Page divider 2 -->
 <app-divider #dividerThree [content]="dividers[2]"></app-divider>
 <!-- end Divider-->
-
