--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,10 +18,10 @@
     <div class="navbar-brand mr-auto pr-2">
       <app-brand-button
         id="brand-button"
-        [height]="'35px'"
-        [width]="'180px'"
+        [height]="'40px'"
+        [width]="'210px'"
         [logoHidden]="nav.clientWidth < 420"
-        [showOnInit]="true"
+        [showOnInit]="false"
       ></app-brand-button>
     </div>
     <div
