--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,4 +1,4 @@
-<div id="notfound" ngxAnimatedGradient>
+<div id="notfound" ngxAnimatedGradient [colors]="colors()">
   <div class="notfound">
     <div class="notfound-404">
       <h1>4<span></span>4</h1>
