--- a/src/app/shared/thank-you/thank-you.component.html
+++ b/src/app/shared/thank-you/thank-you.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron text-xs-center pt-3" style="margin-top: 4rem;">
+<div class="jumbotron text-center pt-3" style="margin-top: 4rem;">
   <h1 class="display-3">Thank You!</h1>
   <p class="lead">
     <strong>{{ content.instructions }}</strong> {{ content.subject }}
