--- a/src/app/shared/user-cart/user-cart.component.html
+++ b/src/app/shared/user-cart/user-cart.component.html
@@ -24,7 +24,6 @@
           </button>
       </div>
       </div>
-      <hr />
       <div
         class="order-md-2 m-auto"
         *ngIf="items"
@@ -69,7 +68,7 @@
               <i class="fa fa-trash"></i>
             </button>
           </li>
-          <li
+          <!-- <li
             class="list-group-item d-flex justify-content-between bg-light"
             *ngIf="couponUsed && couponValid"
           >
@@ -80,10 +79,10 @@
             <span class="text-success"
               >{{ cart?.coupon?.discountName }}</span
             >
-          </li>
+          </li> -->
         </ul>
 
-        <form class="card p-0">
+        <!-- <form class="card p-0">
           <div class="input-group">
             <input
               #coupon
@@ -119,7 +118,7 @@
           <button class="btn btn-outline-danger" (click)="removeCoupon(coupon)">
             Remove Coupon
           </button>
-        </div>
+        </div> -->
       </div>
     </div>
 
@@ -137,7 +136,7 @@
           Total:
         </span>
 
-        <span [hidden]="couponUsed" class="m-text21 w-full-sm">
+        <!-- <span [hidden]="couponUsed" class="m-text21 w-full-sm">
           {{ cart?.total | currency }}
         </span>
         <span
@@ -147,7 +146,7 @@
         >
           {{ getDiscountTotal(cart?.coupon?.couponCode) | currency }}&nbsp;
         SAVE {{ cart?.total * cart?.coupon?.discountAmount | currency }}
-        </span>
+        </span> -->
       </div>
       <div class="flex-w flex-sb-m p-b-12">
         <span class="s-text18 w-size19 w-full-sm">
@@ -165,14 +164,14 @@
           + {{ shippingCost | currency }}
         </span>
       </div>
-      <div class="flex-w flex-sb-m p-b-12" *ngIf="couponUsed && couponValid">
+      <!-- <div class="flex-w flex-sb-m p-b-12" *ngIf="couponUsed && couponValid">
         <span class="s-text18 w-size19 w-full-sm">
           Coupon:
         </span>
         <span class="m-text21 w-full-sm">
           <b class="text-danger text-bold">-</b>{{ cart?.total * cart?.coupon?.discountAmount | currency }}
         </span>
-      </div>
+      </div> -->
       <hr>
       <div class="flex-w flex-sb-m p-b-12">
         <span class="s-text18 w-size19 w-full-sm">
