--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,45 +1,18 @@
-<nav
-  #nav
-  class="navbar navbar-nav animated slideInDown"
-  data-aos="fixed-header"
-  data-aos-offset="1200"
->
+<nav #nav class="navbar navbar-nav animated slideInDown" data-aos="fixed-header" data-aos-offset="1200">
   <div class="container-fluid d-inline-flex">
     <!-- Navbar Menu Toggle -->
-    <div
-      id="nav-icon1"
-      (click)="toggleMobileMenu()"
-      [ngClass]="!hideMobileMenu ? 'open' : ''"
-    >
+    <div id="nav-icon1" (click)="toggleMobileMenu()" [ngClass]="!hideMobileMenu ? 'open' : ''">
       <span></span>
       <span></span>
       <span></span>
     </div>
-    <div class="navbar-brand mr-auto pr-2">
-      <app-brand-button
-        id="brand-button"
-        [height]="'40px'"
-        [width]="'210px'"
-        [logoHidden]="nav.clientWidth < 420"
-        [showOnInit]="false"
-      ></app-brand-button>
+    <div class="navbar-brand mx-auto">
+      <app-brand-button id="brand-button" [height]="'40px'" [width]="'210'" [showOnInit]="true"></app-brand-button>
     </div>
-    <div
-      class="form-group form-inline mb-0 mr-2"
-      [hidden]="nav.clientWidth < 760"
-    >
-      <input
-        type="text"
-        id="navSearch"
-        (focus)="animateElement('navSearch', 'width', '420px', 0.35)"
-        (blur)="animateElement('navSearch', 'width', '200px', 0.25)"
-        placeholder="Search"
-        class="w-full form-control"
-        style="background-clip: inherit;"
-        name="queryString"
-        [(ngModel)]="query"
-        [ngbTypeahead]="search"
-      />
+    <div class="form-group form-inline mb-0 mr-2" [hidden]="nav.clientWidth < 760">
+      <input type="text" id="navSearch" (focus)="animateElement('navSearch', 'width', '420px', 0.35)"
+        (blur)="animateElement('navSearch', 'width', '200px', 0.25)" placeholder="Search" class="w-full form-control"
+        style="background-clip: inherit;" name="queryString" [(ngModel)]="query" [ngbTypeahead]="search" />
       <div class="input-group-addon">
         <button class="btn btn-secondary text-light border-0 outline-">
           <i class="fa fa-search"></i>
@@ -47,19 +20,9 @@
       </div>
     </div>
     <!-- Navbar Cart Button -->
-    <button
-      *ngIf="navCart?.items?.length"
-      class="btn btn-link p-0 mr-2"
-      (click)="navigateTo('/cart')"
-    >
+    <button *ngIf="navCart?.items?.length" class="btn btn-link p-0 mr-2" (click)="navigateTo('/cart')">
       <span class="header-icons-noti">{{ navCart?.items?.length || 0 }}</span>
-      <img
-        src="assets/images/icons/icon-header-03.png"
-        width="30"
-        height="30"
-        alt=""
-        class="header-icon1"
-      />
+      <img src="assets/images/icons/icon-header-03.png" width="30" height="30" alt="" class="header-icon1" />
     </button>
   </div>
 </nav>
