--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,20 +3,18 @@
     <div class="row">
       <div class="col-lg-3 mb-5 mb-lg-0">
         <div class="footer-logo">
-          <app-brand-button
-            #brandButton
-            [height]="'35px'"
-            [width]="'180px'"
-            [primaryColor]="'#FFFFFF'"
-            [secondaryColor]="'#007BFF'"
-          ></app-brand-button>
+          <app-brand-button #brandButton [height]="'35px'" [width]="'180px'" [primaryColor]="'#FFFFFF'"
+            [secondaryColor]="'#007BFF'"></app-brand-button>
         </div>
         <div class="footer-link">
-          <p><em>Disabled Veteran Owned</em></p>
+
+          <img title="A Service Disable Veteran Owned Small Business" src="assets/images/sdvosb.png" width="70"
+            class="img-thumbnail rounded-circle mx-auto" alt="SDVOSB logo">&nbsp;
+          <img title="A division of Global Technology Services, LLC"
+            src="https://firebasestorage.googleapis.com/v0/b/gts-site-80a8a.appspot.com/o/img%2Fgts_logo_alt_short_2.png?alt=media&token=137c99b9-6dd2-443e-933c-ae29c15198be"
+            width="100" class="img-thumbnail mx-auto bg-dark" alt="Global technology Services, LLC logo">
         </div>
-        <div class="footer-link">
-          <p><em>Division of Global Technology Services, LLC</em></p>
-        </div>
+
       </div>
       <div class="col-lg-3 mb-5 mb-lg-0">
         <h5 class="footer-heading">Site pages</h5>
@@ -24,18 +22,18 @@
           <li (click)="brandButton.navigateTo('home')" class="footer-link">
             Home
           </li>
-          <li (click)="brandButton.navigateTo('faq')" class="footer-link">
-            FAQ
+          <li (click)="brandButton.navigateTo('store')" class="footer-link">
+            Store
           </li>
           <li (click)="brandButton.navigateTo('contact')" class="footer-link">
             Contact
           </li>
-          <li (click)="brandButton.navigateTo('about')" class="footer-link">
+          <!-- <li (click)="brandButton.navigateTo('about')" class="footer-link">
             About
-          </li>
+          </li> -->
         </ul>
       </div>
-      <div class="col-lg-3 mb-5 mb-lg-0">
+      <!-- <div class="col-lg-3 mb-5 mb-lg-0">
         <h5 class="footer-heading">Product</h5>
         <ul class="list-unstyled">
           <li (click)="brandButton.navigateTo('faq')" class="footer-link">
@@ -60,7 +58,7 @@
           <li><a href="#" class="footer-link">Guides</a></li>
           <li><a href="#" class="footer-link">Partners</a></li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="copyrights">
@@ -68,20 +66,21 @@
       <div class="row">
         <div class="col-lg-6 text-center text-lg-left">
           <p class="copyrights-text mb-3 mb-lg-0">
-            &copy; All rights reserved. MedTelPlus 2019
+            Made with <i class="fa fa-heart text-danger"></i> by Sure Marketing Solutions &copy; MedTelPlus 2020 - All
+            rights reserved.
           </p>
         </div>
         <div class="col-lg-6 text-center text-lg-right">
           <ul class="list-inline social mb-0">
             <li class="list-inline-item">
-              <a href="https://facebook.com/medtelplus" class="social-link"><i class="fa fa-facebook"></i></a
-              ><a href="https://twitter.com/medtelpus" class="social-link"><i class="fa fa-twitter"></i></a
-              ><a href="#" class="social-link"
-                ><i class="fa fa-youtube-play"></i></a
-              ><a href="#" class="social-link"><i class="fa fa-vimeo"></i></a
-              ><a href="#" class="social-link"
-                ><i class="fa fa-linkedin"></i
-              ></a>
+              <a href="https://facebook.com/medtelplus" target="_blank" class="social-link"><i
+                  class="fa fa-facebook"></i></a>
+              <a href="https://twitter.com/medtelpus" target="_blank" class="social-link"><i
+                  class="fa fa-twitter"></i></a>
+              <a href="https://instagram.com/gts_llc" target="_blank" class="social-link"><i
+                  class="fa fa-instagram"></i></a>
+              <a href="#" target="_blank" class="social-link"><i class="fa fa-vimeo"></i></a>
+              <a href="#" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a>
             </li>
           </ul>
         </div>
