--- a/src/app/shared/divider/divider.component.html
+++ b/src/app/shared/divider/divider.component.html
@@ -1,6 +1,5 @@
 <!-- Divider Section-->
-<section #section [style.height]="'650px'" class="box-shadow text-center"
-  [ngClass]="dividerColors?.bgColor">
+<section #section [style.height]="'650px'" class="box-shadow text-center" [ngClass]="dividerColors?.bgColor">
   <div *ngIf="dividerContent.imageURL" [style.height]="'650px'"
     [style.background-image]="'url(' + dividerContent.imageURL + ')'" class="divider-background-image img-fluid"></div>
 
@@ -8,10 +7,11 @@
     <h2 [ngClass]="dividerColors?.title" class="font-weight-bold">
       {{ dividerContent?.title }}
     </h2>
-    <div class="row">
+    <div class="container">
       <!-- <div class="col-lg-3"></div> -->
       <div class="mx-auto">
-        <p class="lead mt-2 mb-4 px-2" [ngClass]="dividerColors?.text" [innerHTML]="dividerContent?.text | safeHtml"></p>
+        <p class="lead mt-2 mb-4 px-2" [ngClass]="dividerColors?.text" [innerHTML]="dividerContent?.text | safeHtml">
+        </p>
         <button class="mt-4 btn-outline-light" [ngClass]="dividerColors?.cta"
           (click)="navigateTo(dividerContent?.ctaLink)">
           Learn More
