--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,11 +1,14 @@
 <section class="pt-5 mt-5 pb-4">
-  <div class="p-4 text-center"><h1>Checkout</h1></div>
+  <div class="p-4 text-center">
+    <h1>Checkout</h1>
+  </div>
   <div class="container">
     <div class="row">
       <div class="col-md-6 order-md-1">
         <h4 class="mb-1">Shipping address</h4>
         <div class="form-check">
-          <input class="form-check-input" id="useShippingAddress" type="checkbox" [(ngModel)]="newShippingAddress" value="true">
+          <input class="form-check-input" id="useShippingAddress" type="checkbox" [(ngModel)]="newShippingAddress"
+            value="true">
           <label class="form-check-label" for="useShippingAddress">Don't use Billing Address</label>
         </div>
         <div class="slideInDown animate default" id="collapseShippingAddress" [ngbCollapse]="!newShippingAddress">
@@ -14,58 +17,66 @@
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="firstName">First name(<b class="text-danger">*</b>)</label>
-                <input [(ngModel)]="shippingAddress.given_name" type="text" class="form-control" id="firstName" name="first" placeholder="First" required>
+                <input [(ngModel)]="shippingAddress.given_name" type="text" class="form-control" id="firstName"
+                  name="first" placeholder="First" required>
                 <div class="invalid-feedback">
                   Valid first name is required.
                 </div>
               </div>
               <div class="col-md-6 mb-3">
                 <label for="lastName">Last name(<b class="text-danger">*</b>)</label>
-                <input [(ngModel)]="shippingAddress.surname" type="text" class="form-control" name="last" id="lastName" placeholder="Last" required>
+                <input [(ngModel)]="shippingAddress.surname" type="text" class="form-control" name="last" id="lastName"
+                  placeholder="Last" required>
                 <div class="invalid-feedback">
                   Valid last name is required.
                 </div>
               </div>
             </div>
-            
+
             <div class="mb-3">
-            <label for="email">Email <span class="text-muted">(Optional)</span></label>
-            <input [(ngModel)]="shippingAddress.email" type="email" class="form-control" id="email" name="email" placeholder="you@example.com">
-            <div class="invalid-feedback">
-              Please enter a valid email address for shipping updates.
+              <label for="email">Email <span class="text-muted">(Optional)</span></label>
+              <input [(ngModel)]="shippingAddress.email" type="email" class="form-control" id="email" name="email"
+                placeholder="you@example.com">
+              <div class="invalid-feedback">
+                Please enter a valid email address for shipping updates.
+              </div>
             </div>
-          </div>
-  
+
             <div class="mb-3">
               <label for="address">Address(<b class="text-danger">*</b>)</label>
-              <input [(ngModel)]="shippingAddress.address.address_line_1" type="text" class="form-control" id="address" name="street" placeholder="1234 Main St" required>
+              <input [(ngModel)]="shippingAddress.address.address_line_1" type="text" class="form-control" id="address"
+                name="street" placeholder="1234 Main St" required>
               <div class="invalid-feedback">
                 Please enter your shipping address.
               </div>
             </div>
-  
+
             <div class="mb-3">
               <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-              <input [(ngModel)]="shippingAddress.address.address_line_2" type="text" class="form-control" id="address2" name="aptOrNumber" placeholder="Apartment or suite">
+              <input [(ngModel)]="shippingAddress.address.address_line_2" type="text" class="form-control" id="address2"
+                name="aptOrNumber" placeholder="Apartment or suite">
             </div>
             <div class="mb-3">
               <label for="city">City(<b class="text-danger">*</b>)</label>
-                <input [(ngModel)]="shippingAddress.address.admin_area_2" type="text" class="form-control" placeholder="City" name="city" id="city" required>
+              <input [(ngModel)]="shippingAddress.address.admin_area_2" type="text" class="form-control"
+                placeholder="City" name="city" id="city" required>
             </div>
             <div class="mb-3">
               <label for="state">State(<b class="text-danger">*</b>)</label>
-                <select class="form-control p-0" [(ngModel)]="shippingAddress.address.admin_area_1"  name="state" id="state" required>
-                  <option *ngFor="let state of states" [value]="state.abbreviation">{{state.name}}</option>
-                </select>
+              <select class="form-control p-0" [(ngModel)]="shippingAddress.address.admin_area_1" name="state"
+                id="state" required>
+                <option *ngFor="let state of states" [value]="state.abbreviation">{{state.name}}</option>
+              </select>
             </div>
             <div class="mb-3">
               <label for="city">Zipcode(<b class="text-danger">*</b>)</label>
-                <input [(ngModel)]="shippingAddress.address.postal_code" type="text" max="5" class="form-control" placeholder="City or Province" name="zipcode" id="cityzipcode" required>
+              <input [(ngModel)]="shippingAddress.address.postal_code" type="text" max="5" class="form-control"
+                placeholder="City or Province" name="zipcode" id="cityzipcode" required>
             </div>
             <hr>
             <button class="btn btn-primary" (click)="addShippingAddress(shippingAddress)">Save</button>
           </form>
-          
+
         </div>
       </div>
       <div class="col-md-6 order-md-2">
@@ -77,7 +88,14 @@
         <hr>
         <h4 class="mb-3">Payment</h4>
         <ngx-paypal [config]="payPalConfig"></ngx-paypal>
-      </div>  
+        <ngx-stripe-card #stripeElement [options]="cardOptions" [elementsOptions]="elementsOptions"
+          (change)="cardUpdated($event)" (error)="error = $event"></ngx-stripe-card>
+        <div class="error">
+          {{error?.message}}
+        </div>
+        <!-- <button (click)="payNow()" [disabled]="!complete">Pay</button> -->
+        <button (click)="getCardToken()" [disabled]="!complete">Get Card Token</button>
+      </div>
     </div>
   </div>
 </section>
