--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -4,35 +4,22 @@
   </div>
   <div class="container">
     <div class="row">
+      <div class="col-md-6 order-md-2">
+        <app-user-cart #userCart [isCheckout]="true"></app-user-cart>
+      </div>
       <div class="col-md-6 order-md-1">
-        <h4 class="mb-1">Shipping address</h4>
-        <div class="form-check">
-          <input class="form-check-input" id="useShippingAddress" type="checkbox" [(ngModel)]="newShippingAddress"
-            value="true">
-          <label class="form-check-label" for="useShippingAddress">Don't use Billing Address</label>
-        </div>
-        <div class="slideInDown animate default" id="collapseShippingAddress" [ngbCollapse]="!newShippingAddress">
+        <h4 class="mb-1">Billing Details</h4>
+        <div class="fadeIn animated" id="collapseShippingAddress">
           <form name="shippingAddress" class="needs-validation">
             <p class="text-muted mb-3">(<b class="text-danger">*</b>) Indicates a Required Field</p>
-            <div class="row">
-              <div class="col-md-6 mb-3">
-                <label for="firstName">First name(<b class="text-danger">*</b>)</label>
-                <input [(ngModel)]="shippingAddress.given_name" type="text" class="form-control" id="firstName"
-                  name="first" placeholder="First" required>
-                <div class="invalid-feedback">
-                  Valid first name is required.
-                </div>
-              </div>
-              <div class="col-md-6 mb-3">
-                <label for="lastName">Last name(<b class="text-danger">*</b>)</label>
-                <input [(ngModel)]="shippingAddress.surname" type="text" class="form-control" name="last" id="lastName"
-                  placeholder="Last" required>
-                <div class="invalid-feedback">
-                  Valid last name is required.
-                </div>
+            <div class="mb-3">
+              <label for="fullName">Full Name(<b class="text-danger">*</b>)</label>
+              <input [(ngModel)]="shippingAddress.address.name" type="text" class="form-control" id="fullName"
+                name="fullName" placeholder="Full Name" required>
+              <div class="invalid-feedback">
+                Valid full name is required.
               </div>
             </div>
-
             <div class="mb-3">
               <label for="email">Email <span class="text-muted">(Optional)</span></label>
               <input [(ngModel)]="shippingAddress.email" type="email" class="form-control" id="email" name="email"
@@ -44,7 +31,7 @@
 
             <div class="mb-3">
               <label for="address">Address(<b class="text-danger">*</b>)</label>
-              <input [(ngModel)]="shippingAddress.address.address_line_1" type="text" class="form-control" id="address"
+              <input [(ngModel)]="shippingAddress.address.address_line1" type="text" class="form-control" id="address"
                 name="street" placeholder="1234 Main St" required>
               <div class="invalid-feedback">
                 Please enter your shipping address.
@@ -53,49 +40,59 @@
 
             <div class="mb-3">
               <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-              <input [(ngModel)]="shippingAddress.address.address_line_2" type="text" class="form-control" id="address2"
+              <input [(ngModel)]="shippingAddress.address.address_line2" type="text" class="form-control" id="address2"
                 name="aptOrNumber" placeholder="Apartment or suite">
             </div>
             <div class="mb-3">
               <label for="city">City(<b class="text-danger">*</b>)</label>
-              <input [(ngModel)]="shippingAddress.address.admin_area_2" type="text" class="form-control"
+              <input [(ngModel)]="shippingAddress.address.address_city" type="text" class="form-control"
                 placeholder="City" name="city" id="city" required>
             </div>
             <div class="mb-3">
               <label for="state">State(<b class="text-danger">*</b>)</label>
-              <select class="form-control p-0" [(ngModel)]="shippingAddress.address.admin_area_1" name="state"
+              <select class="form-control p-0" [(ngModel)]="shippingAddress.address.address_state" name="state"
                 id="state" required>
                 <option *ngFor="let state of states" [value]="state.abbreviation">{{state.name}}</option>
               </select>
             </div>
             <div class="mb-3">
               <label for="city">Zipcode(<b class="text-danger">*</b>)</label>
-              <input [(ngModel)]="shippingAddress.address.postal_code" type="text" max="5" class="form-control"
+              <input [(ngModel)]="shippingAddress.address.address_zip" type="text" max="5" class="form-control"
                 placeholder="City or Province" name="zipcode" id="cityzipcode" required>
             </div>
             <hr>
             <button class="btn btn-primary" (click)="addShippingAddress(shippingAddress)">Save</button>
           </form>
 
+          <div class="m-auto" *ngIf="cart?.items?.length">
+            <hr>
+            <h4 class="mb-3">Payment</h4>
+            <!-- <ngx-paypal [config]="payPalConfig"></ngx-paypal> -->
+            <ngx-stripe-card #stripeElement [options]="cardOptions"
+              [elementTypes]="['cardNumber', 'cardExpiry', 'cardCvc', 'postalCode']" [elementsOptions]="cardOptions"
+              (change)="cardUpdated($event)" (error)="error = $event"></ngx-stripe-card>
+            <div class="error">
+              {{error?.message}}
+            </div>
+            <!-- <button (click)="payNow()" [disabled]="!complete">Pay</button> -->
+            <button (click)="getCardToken()" [disabled]="!complete">Get Card Token</button>
+          </div>
         </div>
-      </div>
-      <div class="col-md-6 order-md-2">
-        <app-user-cart #userCart [isCheckout]="true"></app-user-cart>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-6 m-auto" *ngIf="cart?.items?.length">
-        <hr>
-        <h4 class="mb-3">Payment</h4>
-        <ngx-paypal [config]="payPalConfig"></ngx-paypal>
-        <ngx-stripe-card #stripeElement [options]="cardOptions" [elementsOptions]="elementsOptions"
-          (change)="cardUpdated($event)" (error)="error = $event"></ngx-stripe-card>
-        <div class="error">
-          {{error?.message}}
-        </div>
-        <!-- <button (click)="payNow()" [disabled]="!complete">Pay</button> -->
-        <button (click)="getCardToken()" [disabled]="!complete">Get Card Token</button>
-      </div>
+      <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
+        <ngb-panel title="Billing Details">
+          <ng-template ngbPanelContent>
+            Content1
+          </ng-template>
+        </ngb-panel>
+        <ngb-panel title="Title2">
+          <ng-template ngbPanelContent>
+            Content2
+          </ng-template>
+        </ngb-panel>
+      </ngb-accordion>
     </div>
   </div>
 </section>
