--- a/src/app/shared/user-cart/user-cart.component.html
+++ b/src/app/shared/user-cart/user-cart.component.html
@@ -1,35 +1,23 @@
-<section
-  #cartSection
-  class="cart bgwhite pb-4"
-  id="cartSection"
-  *ngIf="cart"
-  [style.padding-top]="isCheckout ? '0' : '70px'"
->
+<section #cartSection class="cart bgwhite pb-4" id="cartSection" *ngIf="cart"
+  [style.padding-top]="isCheckout ? '0' : '70px'">
   <div [ngClass]="isCheckout ? '' : 'container'">
     <div class="p-2 pt-0">
-      <div
-      class="card"
-      *ngIf="!items?.length"
-      >
-      <div class="card-header m-0">
-        <h4 class="card-title bg-warning text-light">No Items In Cart!</h4>
-      </div>
-      <div class="card-body">
-        <p class="text-center">Please add some items to your cart</p>
-        
-      </div>
-      <div class="card-footer justify-content-center">
+      <div class="card" *ngIf="!items?.length">
+        <div class="card-header m-0">
+          <h4 class="card-title bg-warning text-light">No Items In Cart!</h4>
+        </div>
+        <div class="card-body">
+          <p class="text-center">Please add some items to your cart</p>
+
+        </div>
+        <div class="card-footer justify-content-center">
           <button class="btn bg-danger" (click)="navigateTo('/store')">
             Go to store <i class="fa fa-cart-plus"></i>
           </button>
+        </div>
       </div>
-      </div>
-      <div
-        class="order-md-2 m-auto"
-        *ngIf="items"
-        [ngClass]="isCheckout ? '' : 'col-md-6'"
-        [style.margin-top]="items ? '-4rem' : '0'"
-      >
+      <div class="order-md-2 m-auto" *ngIf="items" [ngClass]="isCheckout ? '' : 'col-md-6'"
+        [style.margin-top]="items ? '-4rem' : '0'">
         <h4 class="d-flex justify-content-between align-items-center mb-3">
           <span class="text-muted">Your cart</span>
           <span class="badge badge-secondary badge-pill">{{
@@ -37,16 +25,9 @@
           }}</span>
         </h4>
         <ul class="list-group mb-3">
-          <li
-            class="list-group-item d-flex justify-content-between align-items-center  lh-condensed"
-            *ngFor="let item of items; let i = index"
-          >
-            <img
-              [src]="item?.imgUrl"
-              alt=""
-              [width]="80"
-              class="img-thumbnail img-fluid"
-            />
+          <li class="list-group-item d-flex justify-content-between align-items-center  lh-condensed px-1"
+            *ngFor="let item of items; let i = index">
+            <img [src]="item?.imgUrl" alt="" [width]="80" class="img-fluid" />
             <div class="pull-left">
               <h6 class="my-0">{{ item?.productName }}</h6>
               <small class="text-muted">{{ item?.caption }}</small>
@@ -61,10 +42,7 @@
 										<i class="fs-12 fa fa-plus" aria-hidden="true"></i>
 									</button> -->
             <span class="text-muted pt-4">${{ item?.price }}</span>
-            <button
-              class="btn btn-link btn-sm p-0"
-              (click)="removeItemFromCart(item, i)"
-            >
+            <button class="btn btn-link p-1" (click)="removeItemFromCart(item, i)">
               <i class="fa fa-trash"></i>
             </button>
           </li>
@@ -122,11 +100,7 @@
       </div>
     </div>
 
-    <div
-      *ngIf="items"
-      class="order-md-2 m-auto pt-4"
-      [ngClass]="isCheckout ? '' : 'col-md-6'"
-    >
+    <div *ngIf="items" class="order-md-2 m-auto pt-4" [ngClass]="isCheckout ? '' : 'col-md-6'">
       <h4 class="d-flex justify-content-between align-items-end mb-3">
         <span class="text-muted">Cart Totals</span>
       </h4>
@@ -136,17 +110,13 @@
           Total:
         </span>
 
-        <!-- <span [hidden]="couponUsed" class="m-text21 w-full-sm">
+        <span [hidden]="couponUsed" class="m-text21 w-full-sm">
           {{ cart?.total | currency }}
         </span>
-        <span
-          [hidden]="!couponUsed && !couponValid"
-          class="m-text21 w-full-sm"
-          *ngIf="cart?.coupon?.couponCode"
-        >
+        <span [hidden]="!couponUsed && !couponValid" class="m-text21 w-full-sm" *ngIf="cart?.coupon?.couponCode">
           {{ getDiscountTotal(cart?.coupon?.couponCode) | currency }}&nbsp;
-        SAVE {{ cart?.total * cart?.coupon?.discountAmount | currency }}
-        </span> -->
+          SAVE {{ cart?.total * cart?.coupon?.discountAmount | currency }}
+        </span>
       </div>
       <div class="flex-w flex-sb-m p-b-12">
         <span class="s-text18 w-size19 w-full-sm">
@@ -182,10 +152,7 @@
         </span>
       </div>
       <div class="d-flex" *ngIf="!isCheckout && cart?.items?.length">
-        <button
-          class="m-1 btn btn-primary"
-          (click)="navigateTo('/checkout')"
-        >
+        <button class="m-1 btn btn-primary" (click)="navigateTo('/checkout')">
           Checkout <i class="fa fa-check"></i>
         </button>
         <button class="m-1 btn btn-secondary" (click)="navigateTo('/store')">
