--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
             #brandButton
             [height]="'35px'"
             [width]="'180px'"
-            [primaryColor]="'#FFFFFF'"
+            [primaryColor]="'#E7475E'"
             [secondaryColor]="'#007BFF'"
           ></app-brand-button>
         </div>
