--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,5 +12,6 @@
 @import 'global';
 @import 'brand-button';
 @import 'navbar';
-@import 'store';
 @import 'gallery';
+@import 'divider';
+@import 'staff';
