--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,16 +12,24 @@
         <li aria-current="page" class="breadcrumb-item active">About</li>
       </ol>
     </nav>
-    <h1 class="hero-heading">About MedTelPlus</h1>
-    <div class="row">
-      <div class="col-lg-8 mx-auto">
-        <p class="lead">
-          This is the lead paragraph of the article. Pellentesque habitant morbi
-          tristique senectus et netus et malesuada fames ac turpis egestas.
-          Vestibulum tortor quam, feugiat vitae, ultricies eget.
-        </p>
+    <div class="row align-items-center justify-content-center">
+      <div class="col-lg-8 mb-5">
+        <h2 class="text-uppercase text-center mb-5 animate" data-aos="fade-up" data-aos-delay="1000">
+          About
+        </h2>
+        <hr class="bg-secondary">
+        <div class="row">
+          <div class="panel">
+            <div class="panel-body">
+              <h3 class="text-center text-default" data-aos="fade-left" data-aos-delay="500">From the beginning, our goal has been to exceed all expectations, and prove that a great company is only great because
+              of its customers. We value family, honesty, integrety, and always lead by example.
+              </h3>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    
     <div class="row">
       <div class="downArrow bounce">
         <i class="fa fa-chevron-down fa-2x"></i>
@@ -33,39 +41,111 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto">
-        <p class="lead text-muted mb-5">
-          <strong>MedTelPlus cares</strong> about our clients and customers.
-          Whether you are recieving continued telecare services or have made a
-          one-time medical device purchase, MedTelPlus has your health and
-          peace-of-mind at the top of our priorities. In a world where many
-          services are a Google Search away, MedTelPlus knows how to exceed your
-          expectations, and leaves no question about who is number one in
-          Telecare and overall customer satisfaction.
-          <img src="" alt="" />
-        </p>
-        <h2 class="mb-3">Our Promise To Customers</h2>
+        <h3 class="text-muted mb-5 text-center">
+          <strong style="font-size: 200%;" class="text-capitalize">M</strong>edtelplus is a division of <a href="https://www.thenewgts.tech" target="_blank"><img width="125" src="https://firebasestorage.googleapis.com/v0/b/gts-site-80a8a.appspot.com/o/img%2Fgts_logo_alt_short_2.png?alt=media&token=137c99b9-6dd2-443e-933c-ae29c15198be" alt="Global technology Services LLC Logo and link"> </a><br>
+          <small data-aos="fade-left" data-aos-delay="150" class="lead text-muted animated">A Service Disabled Owned Small Business <img
+              src="https://www.integrativestaffing.com/wp-content/uploads/2015/10/sdvosb_logo.jpg" alt="" width="30" />
+          </small>
+        </h3>
+        <div class="row">
+          <div class="col-md-5">
+            <p class="mb-5 mt-0">
+              When our parent company was formed, the only goal was to fulfill every need our customers had regarding technology and
+              logistics.<br>
+              We assembled teams to take on challenging projects, intergrating new technology, building wifi networks, and development healcare communication technology.<br>
+              Partnering up with several other small business, we built a coalition that included a race-team, and all of their
+              sponsors,.<br><br>
+              As a certified <em>SDOSB</em>, we are fortunate to have access to federal funds, by way of government contracts. We are
+              part of a network of over <b>10,000+</b> service disabled owned small businesses, in a multitude of industries.<br>
+              </p>
+
+          </div>
+          <div class="col-md-7">
+            <img
+              src="https://coleygsa.com/wp-content/uploads/2015/04/vetentrTransition.jpg"
+              alt="Contact Agreement Image" class="mb-0 img-fluid">
+              <p class="text-muted figure-caption">Photo by <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.coleygsa.com%2Fstrategies-in-winning-government-contracts-for-vosbsdvosbs%2F&psig=AOvVaw18Yj_5xWb-yJg9FyyKdZ64&ust=1586337759286000&source=images&cd=vfe&ved=0CAMQjB1qFwoTCIiUh-3-1egCFQAAAAAdAAAAABAP">Ramiro Delgado | Feb 23, 2015 | B2G Marketing Tips</a> </p>
+          
+          </div>
+        </div>
+        <h2 class="mb-3">Our Promise</h2>
         <ol class="mb-5 text-left">
           <li>
-            Offer the best and most reliable Telecare services and products.
+            Consistently provide genuine healthcare solutions for both patients and providers.
           </li>
           <li>
-            Leave every person who chooses MedTelPlus happy beyond their
-            expectations.
+            Meet all customer expectations, never missing an opportunity to surpass those expectations.
           </li>
           <li>
-            Continue to add and improve our Telecare services and products using
-            all provided feedback.
+            No matter what, include empathy and compassion in everything we do! . 
           </li>
         </ol>
-        <blockquote class="blockquote mb-5 text-left">
-          IF you have any feedback for MedTelPlus, please send us a message
-          <span>
-            <a href="mailto:info@medtelplus.com" class="btn btn-outline-primary">
-              <i class="fa fa-envelope"></i>
-            </a>
-          </span>
-        </blockquote>
-        <h3 class="mb-5">MedTelPlus Genesis</h3>
+        <hr class="bg-secondary">
+        <h2 class="mb-5">The Team</h2>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-lg-4 animated" data-aos="fade-up" data-aos-delay="50">
+              <div class="staff">
+                <div class="img-wrap d-flex align-items-stretch">
+                  <div class="img align-self-stretch" style="background-image: url(assets/images/staff/Kevin_Szkolnik.jpg);"></div>
+                </div>
+                <div class="text pt-3 text-center">
+                  <h3>Kevin Szkolnik</h3>
+                  <span class="position mb-2">CEO</span>
+                  <div class="faded">
+                    <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                    <ul class="d-inline-flex staff-social text-center">
+                      <li class="mx-auto"><a href="#"><span class="fa fa-twitter"></span></a></li>
+                      <li class="mx-auto"><a href="#"><span class="fa fa-facebook"></span></a></li>
+                      <li class="mx-auto"><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                      <li class="mx-auto"><a href="#"><span class="fa fa-instagram"></span></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 animated" data-aos="fade-up" data-aos-delay="150">
+              <div class="staff">
+                <div class="img-wrap d-flex align-items-stretch">
+                  <div class="img align-self-stretch" style="background-image: url(assets/images/staff/Jimi_Flynn.jpg);"></div>
+                </div>
+                <div class="text pt-3 text-center">
+                  <h3>Jimi Flynn</h3>
+                  <span class="position mb-2">COO</span>
+                  <div class="faded">
+                    <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                    <ul class="d-inline-flex staff-social text-center">
+                      <li class="mx-auto"><a href="#"><span class="fa fa-twitter"></span></a></li>
+                      <li class="mx-auto"><a href="#"><span class="fa fa-facebook"></span></a></li>
+                      <li class="mx-auto"><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                      <li class="mx-auto"><a href="#"><span class="fa fa-instagram"></span></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-4 animated" data-aos="fade-up" data-aos-delay="350">
+              <div class="staff">
+                <div class="img-wrap d-flex align-items-stretch">
+                  <div class="img align-self-stretch" style="background-image: url(assets/images/staff/Guy_Morrison.jpg);"></div>
+                </div>
+                <div class="text pt-3 text-center">
+                  <h3>Guy Morrison</h3>
+                  <span class="position mb-2">Senior Representative</span>
+                  <div class="faded">
+                    <p>I am an ambitious workaholic, but apart from that, pretty simple person.</p>
+                    <ul class="d-inline-flex staff-social text-center">
+                      <li class="mx-auto"><a href="#"><span class="fa fa-twitter"></span></a></li>
+                      <li class="mx-auto"><a href="#"><span class="fa fa-facebook"></span></a></li>
+                      <li class="mx-auto"><a href="#"><span class="fa fa-linkedin"></span></a></li>
+                      <li class="mx-auto"><a href="#"><span class="fa fa-instagram"></span></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <p class="mb-5">
           As a new company, <strong class="text-primary">MedTelPlus</strong> has
           had to work very hard on gaining the trust of our clients and
@@ -87,15 +167,15 @@
           took everything he had learned while serving his country and applied
           it to his business-model when building MedTelPlus.
         </p>
-        <h3 class="mb-5">What Services MedTelPlus Offers</h3>
+        <h3 class="mb-5">What Solutions MedTelPlus Offers</h3>
         <ul class="mb-4 text-left">
-          <li>Medical Alert Devices</li>
+          <li>Medical Supply & Logistics</li>
           <li>
             TeleMedicine: Personalized access to Doctors and Healthcare
             Proffesionals by phone and video
           </li>
-          <li>CGX CancerScreening and Genetic Counseling</li>
-          <li>Superior quality and genuine empathy for all of our users</li>
+          <li>Medical Technology Research & Development</li>
+          <li>Healthcare Patient & Provider Consulting</li>
         </ul>
         <!-- <p><img src="assets/img/blog1.jpg" alt="..." class="img-fluid" /></p> -->
         <p class="mt-5">
@@ -107,6 +187,14 @@
           all the support <strong class="text-primary">MedTelPlus</strong> has
           recieved. Thanks to you all!
         </p>
+        <blockquote class="blockquote mb-5 text-left">
+          <span>
+            If you have any feedback for MedTelPlus, please send us a message
+            <a href="mailto:info@medtelplus.com" class="link">
+              <i class="fa fa-envelope"></i> info@medtelplus.com
+            </a>
+          </span>
+        </blockquote>
       </div>
     </div>
   </div>
