--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 /* THEME COLOR VARIABLES */
 
-$secondary: #3F5E7F;
+$secondary: #E7475E;
 $primary: #007bff;
 $primary-gradient: linear-gradient(90deg,
     rgb(90, 123, 255), rgb(0, 123, 255));
